testing intro page

--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -19,8 +19,50 @@
   }
 }
 
-body {
+@font-face {
+   font-family: alteHaas;
+   src: url(../assets/fonts/AlteHaasGroteskRegular.ttf);
+}
+
+@font-face {
+   font-family: alteHaasBold;
+   src: url(../assets/fonts/AlteHaasGroteskBold.ttf);
+}
+
+body, html {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      height: 100%;
+    }
+
+    .parallax {
+      /* The image used */
+      background-image: url("../assets/images/mic_checker.png");
+
+      /* Set a specific height */
+      min-height: 100vh;
+
+      /* Create the parallax scrolling effect */
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    .content {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 7rem;
+      font-family: alteHaasBold;
+      color: #f7f7f7;
+      padding: 2rem;
+    }
+
+/* body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
