--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -42,28 +42,26 @@ body, html {
   background-image: url("../assets/images/mic_checker.png");
 }
 
-#portfolio {
+#about-me {
   background-image: url("../assets/images/ball_is_life.png");
-}
-
-#skills {
-
 }
 
 #btp {
   background-image: url("../assets/images/this_is_why_we_do_it.png");
 }
 
+#portfolio {}
+
 .parallax {
   min-height: 100vh;
-
+  
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.intro-content {
+.page-title {
   height: 100vh;
   display: flex;
   align-items: center;
@@ -71,39 +69,33 @@ body, html {
   font-size: 7rem;
   font-family: alteHaasBold;
   color: #f7f7f7;
-  padding: 2rem;
 }
 
-.about-me {
-  height: 50vh;
-  background-color: #2c2c2c;
+.content {
   display: flex;
   align-items: center;
-  justify-content: right;
+  justify-content: center;
   font-size: 2rem;
   font-family: alteHaas;
   color: #F72585;
   padding: 2rem;
 }
 
-.portfolio-content {
-  height: 75vh;
+.segment {
+  background-color: #2c2c2c;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 10rem;
-  font-family: alteHaasBold;
-  color: #f7f7f7;
   padding: 2rem;
-}
-
-.btp-content {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-size: 7rem;
   font-family: alteHaasBold;
   color: #f7f7f7;
-  padding: 2rem;
+}
+
+.top-fade {
+  @apply absolute bottom-0 left-0 w-full h-[5.5rem] bg-gradient-to-b from-transparent to-[#2c2c2c] pointer-events-none;
+}
+
+.bottom-fade {
+  @apply absolute bottom-0 left-0 w-full h-[5.5rem] bg-gradient-to-t to-transparent to-[#2c2c2c] pointer-events-none;
 }
