--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -54,7 +54,7 @@ body, html {
 
 .parallax {
   min-height: 100vh;
-  width: 100vh;
+  width: 100%;
   
   background-attachment: fixed;
   background-position: center;
@@ -90,6 +90,14 @@ body, html {
   padding: 2rem;
 }
 
+.image_caption {
+  font-size: 2rem;
+  font-family: alteHaas;
+  font-style: italic;
+  color: #f7f7f7;
+  padding: 1rem;
+}
+
 .segment {
   background-color: #2c2c2c;
   display: flex;
@@ -100,8 +108,4 @@ body, html {
 
 .top-fade {
   @apply absolute bottom-0 left-0 w-full h-[5.5rem] bg-gradient-to-b from-transparent to-[#2c2c2c] pointer-events-none;
-}
-
-.bottom-fade {
-  @apply absolute bottom-0 left-0 w-full h-[5.5rem] bg-gradient-to-t to-transparent to-[#2c2c2c] pointer-events-none;
 }
